--- a/css/navbar.css
+++ b/css/navbar.css
@@ -11,8 +11,8 @@
       -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
          -moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
               box-shadow: 0 2px 10px rgba(0,0,0,.25);
-
-    }
+	  /*background-image: linear-gradient(to bottom, rgb(255, 0, 0), rgb(255, 70, 70));*/
+    }	
 
     .navbar .brand {
       padding: 15px 10px 15px 0px; 
@@ -24,8 +24,13 @@
   
     .navbar .nav > li > a {
       padding: 15px 15px 15px 0px;
-      font-size: 13px;
+      font-size: 15px;
     }
+	
+	/*.navbar-inverse .nav .active > a, .navbar-inverse .nav .active > a:hover, .navbar-inverse .nav .active > a:focus {
+	  color: black;
+	  background-color: white;
+	}*/
 
     /* Offset the responsive button for proper vertical alignment */
     .navbar .btn-navbar {
