--- a/css/otros_proyectos.css
+++ b/css/otros_proyectos.css
@@ -1,4 +1,4 @@
-/*Reglamento stylesheet*/
+/*Otros proyectos stylesheet*/
 
 @import url('bootstrap.min.css');
 @import url('bootstrap-responsive.min.css');
@@ -11,17 +11,21 @@
 	.page-header h1{
 		font-size: 58px;    
 	}
-  
+	
+	.table td{
+		text-align: center;
+		vertical-align: middle;
+	}
+	
 	@media (max-width: 979px){		
-    .page-header{
-      margin-top: 70px;
-    }
-    
-    .page-header h1{
-      font-size: 40px;
-    }    
-   
-  }
+		.page-header{
+		  margin-top: 70px;
+		}
+		
+		.page-header h1{
+		  font-size: 40px;
+		}   
+	}
     
   @media (max-width: 767px){    
     .page-header{
@@ -35,5 +39,16 @@
     
     h1 small{
       font-size: 19px;
-    }    
+    }
+	
+	h4{
+		text-align: center;
+		letter-spacing: -1px;
+	}
+	
+	.table thead th{
+		text-align: center;
+	}
+	
+	
   }
