--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,5 +1,12 @@
 /*Navbar stylesheet*/
 
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:700);
+@import url(http://fonts.googleapis.com/css?family=Gudea:400,700&subset=latin-ext);
+
+*{
+  font-family:"Gudea"
+}
+
 .navbar-wrapper {
 	position: absolute;
 	left: 0%;
@@ -24,7 +31,7 @@
 
 .navbar .nav > li > a {
 	padding: 15px 15px 15px 0px;
-	font-size: 13px;
+	font-size: 16px;
 }
 
 /*.navbar-inverse .nav .active > a, .navbar-inverse .nav .active > a:hover, .navbar-inverse .nav .active > a:focus {
