--- a/css/index.css
+++ b/css/index.css
@@ -5,15 +5,17 @@
 @import url('navbar.css');
 
 .carousel-indicators{  
-  padding-top: 80px;
+  padding-top: 60px;
 }
 
 .carousel-inner h1{
   color: white;
+	font-size: 55px;
+	text-align: center;
 }
 
 .carousel-control{
-  margin-top: 40px; 
+  margin-top: 50px; 
 }
 
 .masthead {
@@ -55,6 +57,7 @@
   background: url(../img/fondo2.jpg) center center no-repeat;
 	background-size: cover;
 	height: 380px;
+	z-index: -1;
 }
 
 #labor{
