--- a/css/index.css
+++ b/css/index.css
@@ -11,11 +11,10 @@
 
 .carousel-inner h1{
   color: white;
-  font-size: 55px;
+  font-size: 60px;
   text-align: center;
-  font-family: "Oxygen", sans-serif;
+  font-family: "Gudea";
   line-height: 55px;
-  margin-top: -10px;
 }
 
 .carousel-control{
