Fix brand text in navbar for tablets

--- a/css/index.css
+++ b/css/index.css
@@ -78,9 +78,9 @@
 		font-weight: normal;
 	}
 	
-	.navbar-wrapper h4{
+	/*.navbar-wrapper h4{
 	  margin-top: 30px;
-	}
+	}*/
 
 	.featurette-heading {
 		font-size: 31px;
