--- a/css/tesis.css
+++ b/css/tesis.css
@@ -11,6 +11,10 @@
 	font-size: 58px;
 }
 
+.row .span4{
+	text-align: center;
+}
+
 @media (max-width: 979px){
 	.page-header{
 		margin-top: 70px;
@@ -34,13 +38,5 @@
 
 	h1 small{
 		font-size: 19px;
-	}
-
-	h4{
-		text-align: center;
-	}
-
-	.row .span4 p{
-		text-align: center;
-	}
+	}		
 }
