--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,7 @@
 
 #carousel{
   padding-top: 90px;
-  background: url(../img/rojo2.jpg) center center no-repeat;
+  background: url(../img/fondo.jpg) center center no-repeat;
   background-size: cover;
   height: 380px;
 }
