--- a/css/navbar.css
+++ b/css/navbar.css
@@ -19,7 +19,7 @@
 	-webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
 	-moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
 	box-shadow: 0 2px 10px rgba(0,0,0,.25);
-	/*background-image: linear-gradient(to bottom, rgb(255, 0, 0), rgb(255, 70, 70));*/
+	/*background-image: linear-gradient(to bottom, rgb(255, 0, 0), rgb(255, 70, 70));*/	
 }
 
 .navbar .nav > li > a {
@@ -40,6 +40,14 @@
 body{
 	padding-bottom: 15px;
 	color: #5a5a5a;
+}
+
+.page-header{
+  margin-top: 120px;
+}
+
+.page-header h1{
+	font-size: 58px;
 }
 
 footer{
