--- a/css/navbar.css
+++ b/css/navbar.css
@@ -14,6 +14,19 @@
 	right: 0%;
 }
 
+.center.navbar .nav,
+.center.navbar .nav > li {
+    float:none;
+    display:inline-block;
+    /*display:inline; /* ie7 fix */
+    /*zoom:1; /* hasLayout ie7 trigger */
+    vertical-align: top;	
+}
+
+.center .navbar-inner {
+    text-align:center;
+}
+
 .navbar .navbar-inner {
 	border-radius: 0px;
 	-webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
@@ -22,19 +35,15 @@
 	/*background-image: linear-gradient(to bottom, rgb(255, 0, 0), rgb(255, 70, 70));*/	
 }
 
-.navbar .nav > li > a {
-	padding: 15px 15px 15px 0px;
-	font-size: 14px;	
-}
-
-/*.navbar-inverse .nav .active > a, .navbar-inverse .nav .active > a:hover, .navbar-inverse .nav .active > a:focus {
-	color: black;
-	background-color: white;
-}*/
-
 /* Offset the responsive button for proper vertical alignment */
 .navbar .btn-navbar {
 	margin-top: 20px;
+}
+
+.navbar .brand{
+  margin-left: auto;
+  margin-right: auto;
+  float: none;
 }
 
 body{
