--- a/css/navbar.css
+++ b/css/navbar.css
@@ -14,13 +14,12 @@
 	right: 0%;
 }
 
-.center.navbar .nav,
-.center.navbar .nav > li {
+.center .navbar .nav, .center.navbar .nav > li {
     float:none;
-    display:inline-block;
-    /*display:inline; /* ie7 fix */
+    display:inline-block;    
+    vertical-align: top;
+	/*display:inline; /* ie7 fix */
     /*zoom:1; /* hasLayout ie7 trigger */
-    vertical-align: top;	
 }
 
 .center .navbar-inner {
@@ -96,6 +95,13 @@ footer{
 		padding: 30px 0px 10px 15px;
 		float: left;
 	}
+	
+	#tablet-brand{	  
+	  float:none;
+	  display:inline-block;    
+	  vertical-align: top;
+	  margin-top: -13px;
+	}
 }
 
 @media (max-width: 767px) {
@@ -105,7 +111,7 @@ footer{
 	
 	.navbar .btn-navbar {
 		margin-top: 5px;		
-		margin-right: 45px;
+		margin-right: 45px;		
 	}
 }
 
